Fix too big line height previews text on Crypto

--- a/client/themes/crypto.css
+++ b/client/themes/crypto.css
@@ -136,3 +136,9 @@ a:hover,
 .tooltipped:after {
 	font-family: Inconsolata-g, monospace;
 }
+
+/* Previews */
+
+#chat .toggle-text {
+	line-height: initial;
+}
